force-app/main/default/objects/Readmission_Report_Link__c/Readmission_Report_Link__c.object-meta.xml
<CustomObject>
    <description>One row per recipient per daily readmission report. Holds the hashed access token of the link issued to that specific address, the one-time code state, and the open and download counts, so a disclosure is attributed to a person rather than only to a facility.</description>
    <label>Readmission Report Link</label>
    <nameField>
        <displayFormat>RRL-{00000000}</displayFormat>
        <label>Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readmission Report Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>