force-app/main/default/objects/Readmission_Report_Link__c/fields/Access_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 of the random token in the recipient link. The raw token exists only in the URL in the recipient email; presenting it is the only way to reach this row from the report site.</description>
    <externalId>true</externalId>
    <label>Access Token Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>