force-app/main/default/objects/Readmission_Report_Link__c/fields/Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Closed_At__c</fullName>
    <inlineHelpText>When the link was closed early, which is separate from when it was due to expire. Set with Closed Reason.</inlineHelpText>
    <label>Closed At</label>
    <type>DateTime</type>
</CustomField>