force-app/main/default/objects/Readmission_Report_Link__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>Set when a link was ended before its expiry, rather than simply timing out. Locked: too many wrong codes or too many code requests. Superseded: a newer link was issued to the same address.</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View limit reached</fullName>
            </value>
            <value>
                <fullName>Manually revoked</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>