force-app/main/default/objects/Readmission_Report_Link__c/fields/Code_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Code_Expires_At__c</fullName>
    <description>When the current one-time code stops working. Ten minutes after it was sent.</description>
    <label>Code Expires At</label>
    <type>DateTime</type>
</CustomField>