force-app/main/default/objects/Readmission_Report_Link__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <description>SHA-256 of the raw token plus the current one-time code. Cleared once the code is used. Never holds the code itself.</description>
    <label>Code Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>