force-app/main/default/objects/Readmission_Report_Link__c/fields/Code_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Code_Sent_At__c</fullName>
    <description>When the last one-time code was emailed. A new one is refused for sixty seconds after this.</description>
    <label>Code Sent At</label>
    <type>DateTime</type>
</CustomField>