force-app/main/default/objects/Readmission_Report_Link__c/fields/Codes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Codes_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many one-time codes have been emailed for this link. The row is locked after five.</description>
    <label>Codes Sent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>