force-app/main/default/objects/Readmission_Report_Link__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>Id of the stored ContentVersion this link serves. One file per facility report, shared by every recipient of it.</description>
    <externalId>true</externalId>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>