force-app/main/default/objects/Readmission_Report_Link__c/fields/Distribution_Id__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Id__c</fullName>
    <description>Phase one only. Id of the public ContentDistribution this row mapped to before the report site replaced public links. Blank on every row issued since.</description>
    <externalId>true</externalId>
    <label>Distribution Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>