force-app/main/default/objects/Readmission_Report_Link__c/fields/Downloads__c.field-meta.xml
<CustomField>
    <fullName>Downloads__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Downloads</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>