force-app/main/default/objects/Readmission_Report_Link__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Readmission Report Links</relationshipLabel>
    <relationshipName>Readmission_Report_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>