force-app/main/default/objects/Readmission_Report_Link__c/fields/Failed_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Wrong codes entered against this link. Reset when a correct code is entered. Five in a row locks the row.</description>
    <label>Failed Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>