force-app/main/default/objects/Readmission_Report_Link__c/fields/First_Opened_At__c.field-meta.xml
<CustomField>
    <fullName>First_Opened_At__c</fullName>
    <label>First Opened At</label>
    <type>DateTime</type>
</CustomField>