force-app/main/default/objects/Readmission_Report_Link__c/fields/Intended_For__c.field-meta.xml
<CustomField>
    <fullName>Intended_For__c</fullName>
    <description>The facility contact this report was really for. In production this equals Recipient Email. In a sandbox run delivery is redirected to testers, so Recipient Email is the tester who can open the link and this field keeps the real contact visible.</description>
    <inlineHelpText>The facility contact the report represents. Differs from Recipient Email only on a redirected sandbox run.</inlineHelpText>
    <label>Intended For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>