force-app/main/default/objects/Readmission_Report_Link__c/fields/Last_Activity_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_At__c</fullName>
    <label>Last Activity At</label>
    <type>DateTime</type>
</CustomField>