force-app/main/default/objects/Readmission_Report_Link__c/fields/Opens__c.field-meta.xml
<CustomField>
    <fullName>Opens__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>