force-app/main/default/objects/Readmission_Report_Link__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>The single address this link was issued to. Attribution is by possession of this mailbox.</description>
    <label>Recipient Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>