force-app/main/default/objects/Readmission_Report_Link__c/fields/Recipient_Role__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Role__c</fullName>
    <label>Recipient Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Chain Contact</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Sandbox Tester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>