force-app/main/default/objects/Readmission_Report_Link__c/fields/Unlock_Browser_Hash__c.field-meta.xml
<CustomField>
    <fullName>Unlock_Browser_Hash__c</fullName>
    <description>SHA-256 of a random value handed to the browser that entered the correct code, as a cookie. While this is set, the unlock window serves only that browser, so the link on its own cannot open the report from anywhere else. Cleared when the link closes.</description>
    <label>Unlock Browser Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>