force-app/main/default/objects/Readmission_Report_Link__c/fields/Unlock_Session_Hash__c.field-meta.xml
<CustomField>
    <fullName>Unlock_Session_Hash__c</fullName>
    <description>SHA-256 of the browser session that entered the correct code. While set, the unlock window only serves that same browser, so the link alone cannot open the report from anywhere else. Cleared when the link is closed.</description>
    <label>Unlock Session Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>