force-app/main/default/objects/Readmission_Report_Link__c/fields/Unlocked_Until__c.field-meta.xml
<CustomField>
    <fullName>Unlocked_Until__c</fullName>
    <description>Until when the report can be fetched with the link alone, after a correct code. Ten minutes from the code being accepted.</description>
    <label>Unlocked Until</label>
    <type>DateTime</type>
</CustomField>